Ajout de classes de tests.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,3 +1,7 @@
-# on laisse tout par défaut et donc on a une BD H2 en mémoire pour les tests taggés @DataJpaTest
+spring.datasource.url = jdbc:h2:mem:test;DB_CLOSE_ON_EXIT=FALSE
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
+
+# on laisse tout par défaut et donc on a une BD H2 en memoire pour les tests tagges @DataJpaTest
 # pour avoir dans la console Spring les details SQL ;)
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create-drop
