--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,9 @@ jobs:
         with:
           java-version: '17'
           distribution: 'adopt'
+      - name: Start MongoDB
+        uses: supercharge/mongodb-github-action@1.8.0
+        with:
+          mongodb-version: ['4.2', '4.4', '5.0', '6.0']
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
