--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,5 +17,8 @@ jobs:
         uses: supercharge/mongodb-github-action@1.8.0
         with:
           mongodb-version: '6.0'
+          mongodb-username: root
+          mongodb-password: root
+          mongodb-db: test
       - name: Build with Maven
         run: mvn --batch-mode --update-snapshots verify
