Correction de la base de test.

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.H2Dialect
 # pour avoir dans la console Spring les details SQL ;)
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create-drop
+
+# on utilise la base de test
+spring.data.mongodb.database=test
